tests/warn/namespace/main.jo
import test

def concat(a: Int, l: test.List[Int]): test.List[Int] = test.Cons(a, l)

def main =
  test.triple pass  // error   // error
  println (test.double 10)
